# shiritori-bot

./: .gitignore  Cargo.toml
src/: commands.rs  event.rs  game.rs  gateway.rs  main.rs  utility.rs
