[package]
name = "shiritori"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
lazy_static = "1.4"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
chrono = "0.4.39"
regex = "1.8"